# devops-study-app

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  README.md  mise.toml
.github/workflows/: backend-tests.yaml  docker-build-push.yaml  frontend-tests.yaml  update-gitops.yaml
scripts/: setup_project
src/backend/: CHANGELOG.md  pyproject.toml
src/backend/src/backend/: main.py
src/backend/src/data/: sessions.csv
src/frontend/: CHANGELOG.md  pyproject.toml
src/frontend/src/frontend/: main.py
