[project]
name = "study-tracker-backend"
version = "0.0.0"
description = "Backend API for tracking study time"
readme = "README.md"
authors = [{ name = "Mischa van den Berg", email = "mischa@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.11.13",
    "uvicorn>=0.34.3",
]

[project.scripts]
study-tracker-api = "backend.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
