[project]
name = "study-tracker-frontend"
version = "0.1.2"
description = "Frontend for DevOps Study Tracker application"
readme = "README.md"
authors = [{ name = "Mischa van den Burg", email = "mischa@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["flask>=3.1.1", "requests>=2.32.3"]

[project.scripts]
study-tracker-frontend = "frontend.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/frontend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=8.4.0",
  "pytest-asyncio>=1.0.0",
  "pytest-cov>=6.1.1",
  "responses>=0.25.7",
  "ruff>=0.11.13",
]
